--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-host_artifactory_root=
-host_models_root=
-host_data_root=
+host_artifactory_root=/data/trickster-artifacts/artifactory
+host_models_root=/data/trickster-artifacts/models
+host_data_root=/data/Datasets
+compute_accelerator=mkl
