--- a/conda/conda-env-mkl.yml
+++ b/conda/conda-env-mkl.yml
@@ -41,6 +41,7 @@ dependencies:
   - importlib-metadata=2.0.0=py_1
   - intel-openmp=2020.2=254
   - jpeg=9b=h024ee3a_2
+  - jupyter=1.0.0
   - keras-preprocessing=1.1.0=py_1
   - kiwisolver=1.3.0=py37h2531618_0
   - lcms2=2.11=h396b838_0
