--- a/config/exp_od_baseline_colab.yml
+++ b/config/exp_od_baseline_colab.yml
@@ -9,9 +9,8 @@ model:
   input_shape: [200, 320]
   maximum_stride: 8
   backbone_spec:
-    name: SmallFCNN
-    strides: [8]
-    width_base: 32
+    name: ResNet50
+    weights: imagenet
   neck_spec:
     name: Rescaler
     output_stride: 4
