--- a/config/exp_od_baseline.yml
+++ b/config/exp_od_baseline.yml
@@ -7,11 +7,10 @@ context:
 
 model:
   input_shape: [200, 320]
-  maximum_stride: 8
+  maximum_stride: 32
   backbone_spec:
-    name: SmallFCNN
-    strides: [8]
-    width_base: 32
+    name: ResNet50
+    weights: imagenet
   neck_spec:
     name: Rescaler
     output_stride: 4
@@ -35,7 +34,7 @@ training:
         split: run
   epochs: 120
   steps_per_epoch: 500
-  batch_size: 10
+  batch_size: 1
   criteria_spec:
     name: od
   optimizer_spec:
