--- a/config/exp_od_baseline.yml
+++ b/config/exp_od_baseline.yml
@@ -7,10 +7,11 @@ context:
 
 model:
   input_shape: [200, 320]
-  maximum_stride: 32
+  maximum_stride: 8
   backbone_spec:
-    name: ResNet50
-    weights: imagenet
+    name: SmallFCNN
+    strides: [8]
+    width_base: 32
   neck_spec:
     name: Rescaler
     output_stride: 4
@@ -34,7 +35,7 @@ training:
         split: run
   epochs: 120
   steps_per_epoch: 500
-  batch_size: 1
+  batch_size: 10
   criteria_spec:
     name: od
   optimizer_spec:
