--- a/config/exp_od_baseline.yml
+++ b/config/exp_od_baseline.yml
@@ -4,16 +4,14 @@ context:
   artifactory_root: ./artifactory
   execution_type: training
   verbose: 2
-  debug: False
 
 model:
   input_width: 320
   input_height: 200
-  maximum_stride: 8
+  maximum_stride: 32
   backbone_spec:
-    name: SmallFCNN
-    strides: [8]
-    width_base: 32
+    name: ResNet50V2
+    weights: imagenet
   neck_spec:
     name: Rescaler
     output_stride: 4
@@ -30,7 +28,7 @@ training:
       sampling_probability: 1.0
       transformations:
         - { name: image, stride: 1 }
-        - { name: heatmap, stride: 4 }
+        - { name: uniform_heatmap, stride: 4 }
         - { name: regression, stride: 4 }
       kwargs:
         full: False
@@ -39,12 +37,12 @@ training:
   steps_per_epoch: 500
   batch_size: 10
   criteria_spec:
-    name: od
+    name: ctdet_od
   optimizer_spec:
     name: Adam
   lr_schedule_spec:
     name: constant
-    learning_rate: 1e-3
+    learning_rate: 1e-4
   callbacks:
     - { name: LatestModelCheckpoint }
     - { name: ObjectMAP, checkpoint_best: True }
