--- a/config/exp_od_baseline_colab.yml
+++ b/config/exp_od_baseline_colab.yml
@@ -10,8 +10,9 @@ model:
   input_height: 200
   maximum_stride: 8
   backbone_spec:
-    name: SmalFCNN
+    name: SmallFCNN
     width_base: 32
+    strides: [8]
   neck_spec:
     name: Rescaler
     output_stride: 4
