--- a/config/exp_od_baseline_colab.yml
+++ b/config/exp_od_baseline_colab.yml
@@ -8,11 +8,9 @@ context:
 model:
   input_width: 320
   input_height: 200
-  maximum_stride: 8
+  maximum_stride: 32
   backbone_spec:
-    name: SmallFCNN
-    width_base: 32
-    strides: [8]
+    name: ResNet50V2
   neck_spec:
     name: Rescaler
     output_stride: 4
