--- a/config/exp_od_baseline_colab.yml
+++ b/config/exp_od_baseline_colab.yml
@@ -10,8 +10,9 @@ model:
   input_height: 200
   maximum_stride: 32
   backbone_spec:
-    name: ResNet50V2
-    weights: imagenet
+    name: SmallFCNN
+    width_base: 32
+    strides: [8]
   neck_spec:
     name: Rescaler
     output_stride: 4
