--- a/config/exp_od_baseline_colab.yml
+++ b/config/exp_od_baseline_colab.yml
@@ -27,9 +27,9 @@ training:
       root: /data/Datasets/cocodoom
       subset: train
       sampling_probability: 1.0
+      filtered_map_numbers: [1, 2]
       transformations:
         - { name: filter_num_objects, minimum_num_objects: 2}
-        - { name: filter_map_number, filtered_maps: [1, 2], mode: include}
         - { name: image, stride: 1 }
         - { name: uniform_heatmap, stride: 4 }
         - { name: regression, stride: 4 }
@@ -45,7 +45,7 @@ training:
     name: Adam
   lr_schedule_spec:
     name: PiecewiseConstantDecay
-    boundaries: [0, 1500]
+    boundaries: [1500]
     values: [0.001, 0.0001]
   callbacks:
     - { name: LatestModelCheckpoint }
@@ -58,8 +58,8 @@ evaluation:
     - name: cocodoom
       root: /data/Datasets/cocodoom
       subset: val-mini
+      filtered_map_numbers: [1, 2]
       transformations:
-        - { name: filter_map_number, filtered_maps: [1, 2], mode: include}
         - { name: image, stride: 1 }
       kwargs:
         full: False
@@ -71,8 +71,8 @@ inference:
     - name: cocodoom
       root: /data/Datasets/cocodoom
       subset: val
+      filtered_map_numbers: [ 1, 2 ]
       transformations:
-        - { name: filter_map_number, filtered_maps: [1, 2], mode: include}
         - { name: image, stride: 1 }
       kwargs:
         full: True
