--- a/config/exp_od_baseline.yml
+++ b/config/exp_od_baseline.yml
@@ -19,7 +19,7 @@ model:
     output_stride: 4
   head_spec:
     name: OD
-    num_classes: 17
+    num_classes: 16
     peak_nms: 0.1
 
 training:
@@ -28,9 +28,9 @@ training:
       root: /data/Datasets/cocodoom
       subset: train
       sampling_probability: 1.0
-      filtered_map_numbers: [1, 2]
+      filtered_map_numbers: []
+      filtered_num_objects: 1
       transformations:
-        - { name: filter_num_objects, minimum_num_objects: 2}
         - { name: image, stride: 1 }
         - { name: uniform_heatmap, stride: 4 }
         - { name: regression, stride: 4 }
@@ -59,7 +59,7 @@ evaluation:
     - name: cocodoom
       root: /data/Datasets/cocodoom
       subset: val
-      filtered_map_numbers: [1, 2]
+      filtered_map_numbers: []
       transformations:
         - { name: image, stride: 1 }
       kwargs:
