--- a/config/exp_od_baseline.yml
+++ b/config/exp_od_baseline.yml
@@ -20,7 +20,7 @@ model:
   head_spec:
     name: OD
     num_classes: 16
-    peak_nms: 0.1
+    peak_nms: 0.3
 
 training:
   data:
@@ -28,7 +28,7 @@ training:
       root: /data/Datasets/cocodoom
       subset: train
       sampling_probability: 1.0
-      filtered_num_objects: 1
+      filtered_num_objects: 0
       transformations:
         - { name: image, stride: 1 }
         - { name: uniform_heatmap, stride: 4 }
@@ -70,6 +70,7 @@ inference:
     - name: cocodoom
       root: /data/Datasets/cocodoom
       subset: val
+      filtered_map_numbers: [11, 12]
       transformations:
         - { name: image, stride: 1 }
       kwargs:
