--- a/config/exp_od_baseline.yml
+++ b/config/exp_od_baseline.yml
@@ -13,14 +13,14 @@ model:
     name: SmallFCNN
     stage_type: simple  # residual
     width_base: 32
-    strides: [8]
+    strides: [2, 4, 8]
   neck_spec:
-    name: Rescaler
+    name: autofusion
     output_stride: 4
   head_spec:
     name: OD
     num_classes: 16
-    peak_nms: 0.3
+    peak_nms: 0.1
 
 training:
   data:
@@ -70,7 +70,6 @@ inference:
     - name: cocodoom
       root: /data/Datasets/cocodoom
       subset: val
-      filtered_map_numbers: [11, 12]
       transformations:
         - { name: image, stride: 1 }
       kwargs:
@@ -82,3 +81,4 @@ inference:
   output_video_path: None
   fps: 25
   total_num_frames: 400
+  output_upscale_factor: 2
