--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-host_artifactory_root=/data/trickster-artifacts/artifactory
-host_models_root=/data/trickster-artifacts/models
-host_data_root=/data/Datasets
+host_artifactory_root=
+host_models_root=
+host_data_root=
 compute_accelerator=mkl
 host_tensorboard_port=6006
 host_jupyter_port=8888
