--- a/conda/conda-env-mkl.yml
+++ b/conda/conda-env-mkl.yml
@@ -8,9 +8,9 @@ dependencies:
   - tensorboard
   - tensorflow-mkl
   - tqdm
-  - yaml
   - pip:
     - git+https://github.com/csxeba/Artifactorium.git
     - opencv-python
     - pycocotools-fix
     - pydot-ng
+    - pyyaml
