--- a/conda/conda-env-mkl.yml
+++ b/conda/conda-env-mkl.yml
@@ -10,6 +10,7 @@ dependencies:
   - tqdm
   - pip:
     - git+https://github.com/csxeba/Artifactorium.git
+    - Cython
     - opencv-python
     - pycocotools-fix
     - pydot-ng
