--- a/conda/conda-env-mkl.yml
+++ b/conda/conda-env-mkl.yml
@@ -8,6 +8,7 @@ dependencies:
   - tensorboard
   - tensorflow-mkl
   - tqdm
+  - gcc
   - pip:
     - git+https://github.com/csxeba/Artifactorium.git
     - Cython
