--- a/config/exp_od_small_fcnn.yml
+++ b/config/exp_od_small_fcnn.yml
@@ -6,7 +6,8 @@ context:
   verbose: 2
 
 model:
-  input_shape: [200, 320]
+  input_height: 200
+  input_width: 320
   maximum_stride: 8
   backbone_spec:
     name: SmallFCNN
@@ -18,8 +19,8 @@ model:
     output_width: 64
   head_spec:
     name: OD
-    num_classes: 17
-    peak_nms: 0.1
+    num_classes: 16
+    peak_nms: 0.3
 
 training:
   data:
@@ -27,6 +28,7 @@ training:
       root: /data/cocodoom
       subset: train
       sampling_probability: 1.0
+      filtered_num_objects: 0
       transformations:
         - { name: image, stride: 1 }
         - { name: heatmap, stride: 4 }
@@ -54,12 +56,14 @@ training:
   optimizer_spec:
     name: Adam
   lr_schedule_spec:
-    name: constant
-    learning_rate: 3e-4
+    name: PiecewiseConstantDecay
+    boundaries: [20000, 40000]
+    values: [0.01, 0.001, 0.0001]
   callbacks:
     - { name: LatestModelCheckpoint }
     - { name: ObjectMAP, checkpoint_best: True }
     - { name: CSVLogger }
+    - { name: TensorBoard }
 
 evaluation:
   data:
@@ -84,8 +88,9 @@ inference:
         full: True
         split: run
 
-  visualization_mode: raw_heatmap
+  visualization_mode: detection
   to_screen: True
-  output_video_path: 
+  output_video_path: None
   fps: 25
-  total_num_frames: 200
+  total_num_frames: 400
+  output_upscale_factor: 2
