--- a/conda/conda-env-mkl.yml
+++ b/conda/conda-env-mkl.yml
@@ -1,127 +1,18 @@
-channels:
-  - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _tflow_select=2.3.0=mkl
-  - absl-py=0.11.0=py37h06a4308_0
-  - aiohttp=3.6.3=py37h7b6447c_0
-  - asn1crypto=1.3.0=py37_0
-  - astunparse=1.6.3=py_0
-  - async-timeout=3.0.1=py37_0
-  - attrs=20.3.0=pyhd3eb1b0_0
-  - blas=1.0=mkl
-  - blinker=1.4=py37_0
-  - c-ares=1.16.1=h7b6447c_0
-  - ca-certificates=2020.10.14=0
-  - cachetools=4.1.1=py_0
-  - certifi=2020.6.20=pyhd3eb1b0_3
-  - cffi=1.14.0=py37h2e261b9_0
-  - chardet=3.0.4=py37_1003
-  - click=7.1.2=py_0
-  - conda=4.9.2=py37h06a4308_0
-  - conda-package-handling=1.6.0=py37h7b6447c_0
-  - cryptography=2.8=py37h1ba5d50_0
-  - cycler=0.10.0=py37_0
-  - dbus=1.13.18=hb2f20db_0
-  - expat=2.2.10=he6710b0_2
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.10.4=h5ab3b9f_0
-  - gast=0.3.3=py_0
-  - glib=2.63.1=h5a9c865_0
-  - google-auth=1.23.0=pyhd3eb1b0_0
-  - google-auth-oauthlib=0.4.2=pyhd3eb1b0_2
-  - google-pasta=0.2.0=py_0
-  - grpcio=1.31.0=py37hf8bcb03_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - h5py=2.10.0=py37hd6299e0_1
-  - hdf5=1.10.6=hb1b8bf9_0
-  - icu=58.2=he6710b0_3
-  - idna=2.8=py37_0
-  - importlib-metadata=2.0.0=py_1
-  - intel-openmp=2020.2=254
-  - jpeg=9b=h024ee3a_2
-  - jupyter=1.0.0
-  - keras-preprocessing=1.1.0=py_1
-  - kiwisolver=1.3.0=py37h2531618_0
-  - lcms2=2.11=h396b838_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.13.0.1=hd408876_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_0
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.14=h7b6447c_0
-  - libxml2=2.9.9=hea5a465_1
-  - markdown=3.3.3=py37h06a4308_0
-  - matplotlib=3.3.2=0
-  - matplotlib-base=3.3.2=py37h817c723_0
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py37he904b0f_0
-  - mkl_fft=1.2.0=py37h23d657b_0
-  - mkl_random=1.1.1=py37h0573a6f_0
-  - multidict=4.7.6=py37h7b6447c_1
-  - ncurses=6.2=he6710b0_0
-  - numpy=1.19.2=py37h54aff64_0
-  - numpy-base=1.19.2=py37hfa32c7d_0
-  - oauthlib=3.1.0=py_0
-  - olefile=0.46=py37_0
-  - openssl=1.1.1h=h7b6447c_0
-  - opt_einsum=3.1.0=py_0
-  - pcre=8.44=he6710b0_0
-  - pillow=8.0.1=py37he98fc37_0
-  - pip=20.0.2=py37_1
-  - protobuf=3.13.0.1=py37he6710b0_1
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.8=py_0
-  - pycosat=0.6.3=py37h7b6447c_0
-  - pycparser=2.19=py37_0
-  - pyjwt=1.7.1=py37_0
-  - pyopenssl=19.1.0=py37_0
-  - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py37h05f1152_2
-  - pysocks=1.7.1=py37_0
-  - python=3.7.7=h191fe78_0_cpython
-  - python-dateutil=2.8.1=py_0
-  - pyyaml=5.3.1
-  - qt=5.9.7=h5867ecd_1
-  - readline=7.0=h7b6447c_5
-  - requests=2.22.0=py37_1
-  - requests-oauthlib=1.3.0=py_0
-  - rsa=4.6=py_0
-  - ruamel_yaml=0.15.87=py37h7b6447c_0
-  - scipy=1.5.2=py37h0b6359f_0
-  - setuptools=45.2.0=py37_0
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.14.0=py37_0
-  - sqlite=3.31.1=h7b6447c_0
-  - tensorboard=2.3.0=pyh4dce500_0
-  - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.2.0=mkl_py37h6e9ce2d_0
-  - tensorflow-base=2.2.0=mkl_py37hd506778_0
-  - tensorflow-estimator=2.2.0=pyh208ff02_0
-  - tensorflow-mkl=2.2.0=h4fcabd2_0
-  - termcolor=1.1.0=py37_1
-  - tk=8.6.8=hbc83047_0
-  - tornado=6.0.4=py37h7b6447c_1
-  - tqdm=4.42.1=py_0
-  - urllib3=1.25.8=py37_0
-  - werkzeug=1.0.1=py_0
-  - wheel=0.34.2=py37_0
-  - wrapt=1.12.1=py37h7b6447c_1
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - yarl=1.6.2=py37h7b6447c_0
-  - zipp=3.4.0=pyhd3eb1b0_0
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.3.7=h0b5b093_0
+  - jupyter
+  - matplotlib
+  - numpy
+  - pillow
+  - pip
+  - scipy
+  - tensorboard
+  - tensorflow-mkl
+  - tqdm
   - pip:
     - git+https://github.com/csxeba/Artifactorium.git
-    - cython==0.29.21
-    - opencv-python==4.4.0.46
-    - pycocotools-fix==2.0.0.9
-    - pydot-ng==2.0.0
+    - Cython
+    - opencv-python
+    - pycocotools-fix
+    - pydot-ng
+    - pyyaml
+    - gast<0.4
