--- a/config/exp_od_small_fcnn.yml
+++ b/config/exp_od_small_fcnn.yml
@@ -1,25 +1,22 @@
 context:
   experiment_set: od
   experiment_name: baseline
-  artifactory_root: ./artifactory
+  artifactory_root: /artifactory
   execution_type: training
   verbose: 2
 
 model:
-  input_width: 320
   input_height: 200
+  input_width: 320
   maximum_stride: 8
   backbone_spec:
-    name: ResNet50
-    feature_layers:
-      - conv2_block3_out  # stride: 4 width: 256
-      - conv3_block4_out  # stride: 8 width: 512
-#      - conv4_block6_out  # stride: 16 width: 1024
-#      - conv5_block3_out  # stride: 32 width: 2048
+    name: SmallFCNN
+    strides: [2, 4, 8]
+    width_base: 16
   neck_spec:
     name: AutoFusion
     output_stride: 4
-    output_width: 128
+    output_width: 64
   head_spec:
     name: OD
     num_classes: 16
