--- a/conda/conda-env-mkl.yml
+++ b/conda/conda-env-mkl.yml
@@ -1,9 +1,11 @@
 dependencies:
+  - python~=3.9
   - jupyter
   - matplotlib
   - numpy
   - pillow
   - pip
+  - pydantic
   - scipy
   - tensorboard
   - tensorflow-mkl
